--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
                     </div>
                 </div>
             </nav>
-    <h1>Hello, world!</h1>
+            <div class="jumbotron">
+                <div class="container">
+                    <h1>Ready. Set. Code</h1>
+                    <p>Are you ready to...辰雨</p>
+                    <br>
+                    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn More >></a>  <a class="btn btn-primary btn-lg" href="#" role="button">Download Free Trial >></a></p>
+                </div> 
+
+            </div>
+            <h1>Hello World</h1>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
